<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/quizLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/question_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center_horizontal"
            android:text="@string/question_text"
            android:textColor="@android:color/black"
            android:textSize="21sp"
            tools:text="QUEST QUEST QUEST QUEST QUEST QUEST QUEST QUEST QUEST QUEST QUEST QUEST" />

        <TextView
            android:id="@+id/cheater_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center_horizontal"
            android:textAllCaps="false"
            android:textColor="@android:color/holo_red_dark"
            android:textStyle="bold|italic" />
    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2">

        <Button
            android:id="@+id/false_button"
            style="@android:style/Widget.Material.Light.Button.Borderless"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:background="@color/falseButton"
            android:text="@string/false_button"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/true_button"
            style="@android:style/Widget.Material.Light.Button.Borderless"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:background="@color/trueButton"
            android:text="@string/true_button"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/cheat_button"
            style="@android:style/Widget.Material.Light.Button.Borderless"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:background="@color/cheatButton"
            android:text="@string/cheat_button"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/next_button"
            style="@android:style/Widget.Material.Light.Button.Borderless"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:background="@color/nextButton"
            android:text="@string/next_button"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </GridLayout>

</LinearLayout>
